fix: home spacing

--- a/css/_sass/home.sass
+++ b/css/_sass/home.sass
@@ -1,15 +1,15 @@
 .home__container
   display: flex
-  align-items: center
+  padding: 2vw 2vw 0 2vw
 
   @include media-query($tablet)
     flex-direction: column
 
 .home__picture-img
-  height: calc(100vh - #{$header-height} - #{$footer-height} - #{$border-padding * 2} - #{2em * 2})
+  height: calc(100vh - #{$header-height} - #{$footer-height} - #{14em})
 
 .home__description
-  margin: 0 2em
+  margin: 0 0 0 8vw
 
   @include media-query($tablet)
     margin: 2em 0
